--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "express": "4.18.1"
+    "express": "4.18.1",
+    "node-cache": "^5.1.2"
   },
   "scripts": {
     "start": "node index.js"
