--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.5",
     "express": "4.18.1",
     "node-cache": "^5.1.2"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
